--- a/de.keinpeil.teamspeak/package.json
+++ b/de.keinpeil.teamspeak/package.json
@@ -1,13 +1,13 @@
 {
     "name": "KeinPeils Theme",
     "description": "KeinPeils inspired custom TS5 Theme",
-    "version": "1.0.0",
+    "version": "1.1.0",
     "identifier": "de.keinpeil.teamspeak",
     "engines": {
         "teamspeak": 1
     },
     "image": "keinpeil.png",
-    "license": "CC BY-SA",
+    "license": "MIT",
     "author": {
         "name": "KeinPeil",
         "email": "mhf_zocker@gmx.de",
